# tableau-to-looker-accelerator

./: .coverage  .gitignore  .pre-commit-config.yaml  CALCULATED_FIELDS_COMPLETION_STATUS.md  CD_DETAIL_FIX_PLAN.md  Contribute.md  MANIFEST.in  PROGRESS.md  PROGRESS_LOW_PRIORITY.md  PROGRESS_PHASE2.md  PROGRESS_PHASE2_OLD.md  PROGRESS_PHASE3.md  README.md  SETUP.md  architecture.md  ast_parser_demo_results.json  cloudbuild.yaml  explain_full_process.py  explain_structure_understanding.py  format_complex_sql.py  instructions.md  pyproject.toml  pyproject_old.toml  pytest.ini  requirements.md  test_all_v2.py  test_ast_fields.py  test_calculated_fields_lookml.py  test_case_statement_support.py  test_chart_detection_focused.py  test_complex_formulas.py  test_dashboard_comprehensive.py  test_deeply_nested_formula.py  test_error_handling.py  test_formula_runner.py  test_lod_expressions.py  test_looker_native_dashboard.py  test_lookml_generator_calculated_fields.py  test_sqlparse_comparison.py  test_v2_generator.py  (+2 more)
Verizon_workbooks/: Center & Employee Statistics Modified.twb  Channel_Detail.twb  DNA Report Modified.twb  Device_Breakdown_dashboard.twb  Intraday_Sales.dashboard.lookml  Intraday_Sales.twb  Set_Up_Go_Launch_Dashboard_Modified.twb  Set_Up_Go_without_Text_dashboard.twb  ch_nvu.xml
docs/: PATTERN_ORDERING_GUIDE.md  TOKENIZATION_AND_PARSING.md  TOKENIZATION_EXAMPLES.md  TOKENIZATION_TROUBLESHOOTING.md  context.md
sample_twb_files/: Book2.twb  Book3.twb  Book4.twb  Book5_calc.twb  ManyToManyBridge.twb  MultiChainJoins.twb  SelfJoinEmployees.twb  StarSchema.twb  String_function.twb  book6_calc.twb  book7_calc.twb  book8.twb  lookml_output.json  processed_connections.json  processed_output.json  processed_pipeline_output.json  setup_and_go.twb  tab_look_migration_Accessibility_Dashboard_Design_bq.twb  tab_look_migration_Intraday_Sales_test.twb
sample_twb_files/generated_json_book5/: ast_fields_examples.json  formula_types_examples.json
src/tableau_to_looker_parser/: __init__.py  build.py  main.py  metrics.py
src/tableau_to_looker_parser.egg-info/: PKG-INFO  requires.txt
src/tableau_to_looker_parser/config/: chart_detection.yaml  chart_styling.yaml
src/tableau_to_looker_parser/converters/: ast_to_lookml_converter.py  chart_styling_engine.py  enhanced_chart_type_detector.py  formula_parser.py  tableau_chart_rule_engine.py
src/tableau_to_looker_parser/core/: __init__.py  field_derivation_engine.py  field_validation_engine.py  migration_engine.py  plugin_registry.py  tableau_style_extractor.py  xml_parser.py  xml_parser_v2.py
src/tableau_to_looker_parser/generators/: __init__.py  base_generator.py  connection_generator.py  dashboard_generator.py  filter_processor.py  (+12 more)
tests/: test_book2_pipeline.py  test_book3_pipeline.py  test_book4_pipeline.py  test_calculated_fields_book5.py  test_calculated_fields_book6.py  test_calculated_fields_book7.py  test_complete_pipeline.py  test_formula_conversion.py  test_hello.py  test_lookml_generator_book2.py  test_lookml_generator_book3.py  test_lookml_generator_book4.py  test_lookml_generator_book8.py  test_lookml_generator_many_to_many.py  test_lookml_generator_multi_chain.py  test_lookml_generator_self_join.py  test_lookml_generator_star_schema.py  test_migration_engine_integration_py  test_sql_converter.py  test_string_functions.py  worksheet_dashboard_handlers_py
tests/dataset/: postgresql_test_data.json  preprocessing_test_data.json
tests/unit/: test_xml_parser.py
(+26 files in other folders)
