[project]
name = "tableau-to-looker-parser"
version = "0.1.0"
description = "Core library for Tableau to LookML migration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["tableau", "looker", "lookml", "migration", "bi", "business-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

dependencies = [
    "lxml>=5.0.0,<6.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
    "jinja2>=3.1.0,<4.0.0",
    "setuptools>=61.0",
    "wheel",
    "sqlglot>=27.18.0",
    "tableauserverclient>=0.38",
    "python-slugify>=8.0.4",
    "python-dotenv>=1.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.8.0,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "ruff>=0.3.0,<1.0.0",
]

[project.scripts]
tableau-assess = "tableau_to_looker_parser.build:main"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
